sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  lgr = getNombreValeurs()
  
}



def insert(n:Int){
  for (i<-n-1 to 0 by -1){
    if (plusPetit(i,n)){
      echange(i,n)
    }
  }
}